# conclave

./: .dockerignore  .env.dev  .env.example  .gitignore  .gitleaks.toml  .markdownlint.yaml  .pre-commit-config.yaml  .secrets.baseline  .vulture_whitelist.py  AUTONOMOUS_DEVELOPMENT_PROMPT.md  CHANGELOG.md  CLAUDE.md  CONSTITUTION.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  conftest.py  cosmic-ray.toml  docker-compose.cpu.yml  docker-compose.gpu.yml  docker-compose.mtls.yml  docker-compose.override.yml  docker-compose.yml  pyproject.toml  vulture_whitelist.py
.claude/agents/: architecture-reviewer.md  devops-reviewer.md  docs-reviewer.md  phase-boundary-auditor.md  pr-describer.md  pr-reviewer.md  qa-reviewer.md  red-team-reviewer.md  software-developer.md  spec-challenger.md  ui-ux-reviewer.md
.claude/hooks/: pre_tool_use.sh  worktree_create.sh
.claude/standards/: test-quality.md
.github/workflows/: ci.yml  release.yml
.zap/: rules.tsv
alembic/: env.py
alembic/versions/: 001_add_privacy_ledger_tables.py  002_add_connection_and_setting_tables.py  003_fix_epsilon_column_precision.py  004_add_dp_columns_to_synthesis_job.py  005_seed_default_privacy_ledger.py  006_add_generation_columns_to_synthesis_job.py  007_add_owner_id_columns.py  007_encrypt_connection_metadata.py  008_add_owner_id_columns.py  009_multi_tenancy_foundation.py  010_rbac_unique_email_per_org.py  011_add_last_login_at.py
demos/: README.md  conclave_demo.py  epsilon_curves.ipynb  generate_figures.py  quickstart.ipynb  training_data.ipynb
demos/results/: benchmark_customers_v1.json  benchmark_orders_v1.json  grid_config.json
docs/: ARCHITECTURAL_REQUIREMENTS.md  ASSUMPTIONS.md  BACKLOG.md  BUSINESS_REQUIREMENTS.md  DATA_COMPLIANCE.md  DEPENDENCY_AUDIT.md  DEPENDENCY_AUDIT_POLICY.md  DEVELOPER_GUIDE.md  DEVELOPMENT_STORY.md  DISASTER_RECOVERY.md  DOCUMENT_INDEX.md  DP_QUALITY_REPORT.md  E2E_VALIDATION.md  E2E_VALIDATION_RESULTS.md  EXECUTION_PLAN.md  LICENSING.md  LOAD_TEST_RESULTS.md  OPERATIONS_RUNBOOK.md  OPERATOR_MANUAL.md  PRODUCTION_DEPLOYMENT.md  REQUEST_FLOW.md  RETRO_LOG.md  SCALABILITY.md  SECURITY_HARDENING.md  TEAM_BLUEPRINT.md  TROUBLESHOOTING.md  e2e_load_test_results.json  index.md  infrastructure_security.md  mutation-score-p53.txt
docs/adr/: ADR-0001-modular-monolith-topology.md  ADR-0002-chromadb-runtime-dependency.md  ADR-0003-redis-idempotency.md  ADR-0004-application-level-encryption.md  ADR-0004-opentelemetry.md  ADR-0005-jwt-library-selection.md  ADR-0005-orphan-task-reaper.md  ADR-0006-application-level-encryption.md  ADR-0006-zero-trust-token-binding.md  ADR-0007-jwt-library-selection.md  ADR-0008-zero-trust-token-binding.md  ADR-0009-vault-unseal-pattern.md  ADR-0010-worm-audit-logger.md  ADR-0011-prometheus-metrics.md  ADR-0012-ingestion-adapter.md  ADR-0013-relational-mapping.md  ADR-0014-masking-engine.md  ADR-0015-subsetting-saga.md  ADR-0016-cli-click-dependency.md  ADR-0017-synthesizer-dp-library-selection.md  ADR-0017a-opacus-secure-mode-decision.md  ADR-0018-psutil-ram-introspection.md  ADR-0019-ai-pr-review-governance.md  ADR-0020-huey-task-queue-singleton.md  ADR-0021-sse-and-bootstrapper-owned-tables.md  ADR-0022-offline-license-activation.md  ADR-0023-frontend-react-vite-spa.md  ADR-0024-pure-asgi-body-replay-middleware.md  ADR-0025-custom-ctgan-training-loop.md  ADR-0026-dp-parameter-accessibility.md  ADR-0027-bootstrapper-submodule-re-export-pattern.md  ADR-0028-pytest-asyncio-1x-upgrade.md  ADR-0029-architectural-requirements-gap-analysis.md  ADR-0030-float-to-numeric-epsilon-precision.md  ADR-0031-pgbouncer-image-substitution.md  ADR-0032-mypy-synthesizer-ignore-missing-imports.md  ADR-0033-cross-module-exception-detection-by-class-name.md  ADR-0034-shredded-lifecycle-state-and-audit-tolerance.md  ADR-0035-dual-driver-db-access.md  ADR-0036-discriminator-level-dp-sgd.md  (+29 more)
docs/api/: API_REFERENCE.md  openapi.json
docs/archive/: ARCHITECTURAL_REQUIREMENTS.md  AUTONOMOUS_DEVELOPMENT_PROMPT.md  BACKLOG.md  BUSINESS_REQUIREMENTS.md  EXECUTION_PLAN.md  REQUIREMENTS.md  TEAM_BLUEPRINT.md
docs/backlog/: advisory-drain-pre-p44.md  deferred-items.md  phase-0.6.md  phase-0.8.md  phase-01.md  phase-02.md  phase-03.md  phase-09.md  phase-10.md  phase-11.md  phase-12.md  phase-13.md  phase-14.md  phase-15.md  phase-16.md  phase-17.md  phase-18.md  phase-19.md  phase-20.md  phase-21.md  phase-22.md  phase-23.md  phase-24.md  phase-25.md  phase-26.md  phase-27.md  phase-28.md  phase-29.md  phase-3.5.md  phase-30.md  phase-31.md  phase-32.md  phase-33.md  phase-34.md  phase-35.md  phase-36.md  phase-37.md  phase-38.md  phase-39.md  phase-4.md  (+50 more)
docs/retro_archive/: phases-0-to-7.md  phases-15-to-45.md  phases-46-to-71.md  phases-8-to-14.md
docs/runbooks/: oidc-idp-unavailable.md
frontend/: .gitignore  DESIGN_TOKENS.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/scripts/: download-fonts.sh
frontend/src/: App.tsx  main.tsx
k8s/network-policies/: README.md  app-policy.yaml  default-deny.yaml  minio-policy.yaml  monitoring-policy.yaml  pgbouncer-policy.yaml  postgres-policy.yaml  redis-policy.yaml
pgbouncer/: userlist.txt  userlist.txt.example
prometheus/: prometheus.yml
sample_data/: customers.csv  order_items.csv  orders.csv  payments.csv
sample_data/pagila/: README.md
scripts/: benchmark_dp_quality.py  benchmark_epsilon_curves.py  build_airgap.sh  bump_version.sh  check_mutation_score.py  ci-local.sh  dr_dry_run.sh  e2e_load_test.py  entrypoint.sh  generate-mtls-certs.sh  generate_ts_types.py  init_chroma.py  load_test.py  provision_pagila.sh  rotate-mtls-certs.sh  seed_chroma.py  seed_chroma_retro.py  seed_sample_data.py  seeds.py  setup_agile_env.sh  smoke_test.sh  validate_airgap.sh  validate_full_pipeline.py  verify-audit-chain.py  verify_integration_count.sh
spikes/: findings_spike_b.md  findings_spike_c.md  spike_fpe_luhn.py  spike_ml_memory.py  spike_topological_subset.py
tests/: conftest.py  conftest_types.py
(+547 files in other folders)
