[tool.poetry]
name = "conclave-engine"
version = "0.1.0"
description = "Air-Gapped Synthetic Data Generation Engine"
authors = []
readme = "README.md"
packages = [{ include = "synth_engine", from = "src" }]

# ---------------------------------------------------------------------------
# CLI entrypoints
# ---------------------------------------------------------------------------
[tool.poetry.scripts]
conclave-subset = "synth_engine.bootstrapper.cli:subset"

[tool.poetry.dependencies]
python = "^3.14"
chromadb = "^1.5.5"
click = ">=8.0.0,<9.0.0"
fastapi = ">=0.115.0,<1.0.0"
uvicorn = {version = ">=0.32.0,<1.0.0", extras = ["standard"]}
huey = {version = ">=2.5.0,<3.0.0", extras = ["redis"]}
redis = ">=5.0.0,<6.0.0"
opentelemetry-sdk = ">=1.28.0,<2.0.0"
opentelemetry-instrumentation-fastapi = ">=0.49b0,<1.0.0"
httpx = ">=0.27.0,<1.0.0"
sqlmodel = ">=0.0.21,<1.0.0"
alembic = ">=1.14.0,<2.0.0"
psycopg2-binary = ">=2.9.0,<3.0.0"
cryptography = ">=46.0.5,<47.0.0"
PyJWT = {version = ">=2.10.0,<3.0.0", extras = ["cryptography"]}
passlib = {version = ">=1.7.4,<2.0.0", extras = ["bcrypt"]}
prometheus-client = ">=0.21.0,<1.0.0"
pydantic = ">=2.0.0,<3.0.0"
faker = "^40.11.0"
pandas = ">=2.2.0,<3.0.0"
numpy = ">=1.26.0,<3.0.0"
psutil = ">=5.9.0,<8.0.0"
asyncpg = ">=0.29.0,<1.0.0"
# greenlet: required by SQLAlchemy async extension (sqlalchemy.ext.asyncio).
# On ARM64 (Apple Silicon / Linux aarch64) the SQLAlchemy platform marker
# does not match "aarch64" for arm64, so greenlet is not auto-installed.
# Pinning explicitly ensures it is always present regardless of platform.
greenlet = ">=3.0.0,<4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-cov = "^6.1"
pytest-asyncio = ">=0.24.0,<1.0.0"
ruff = "^0.11"
mypy = "^1.15"
bandit = { version = "^1.8", extras = ["toml"] }
pip-audit = "^2.9"
vulture = "^2.14"
import-linter = "^2.3"
pre-commit = "^4.2"
cyclonedx-bom = "^5.1"
detect-secrets = "^1.5"
# Type stubs for synthesizer module dependencies (T4.1)
# boto3-stubs provides mypy coverage for the MinioStorageBackend;
# pandas-stubs covers EphemeralStorageClient DataFrame parameters.
pandas-stubs = ">=2.2.0,<4.0.0"
types-psutil = ">=5.9.0,<8.0.0"
boto3-stubs = ">=1.35.0,<2.0.0"
# aiosqlite: async SQLite driver for unit tests using AsyncSession with SQLite
# Required by T4.4 unit tests that test async DB infrastructure without PostgreSQL.
aiosqlite = ">=0.19.0,<1.0.0"

# ---------------------------------------------------------------------------
# Integration group — NOT included by default; wired in Task 2.2
# Install with: poetry install --with dev,integration
# Requires libpq (PostgreSQL client library) to be present on the host.
# ---------------------------------------------------------------------------
[tool.poetry.group.integration.dependencies]
pytest-postgresql = "^7.0"

# ---------------------------------------------------------------------------
# Synthesizer group — T4.1 (GPU Passthrough & Ephemeral Storage)
#                      T4.2b adds sdv (CTGAN via SDV library)
# Install with: poetry install --with dev,synthesizer
#
# Rationale for each dependency:
#   torch    — GPU/CPU device detection via torch.cuda.is_available(); CTGAN/TVAE
#              training backend (ADR-0017). FORCE_CPU=true provides CI fallback.
#              Corrected from >=2.10.0 (non-existent) to >=2.5.0 (T4.1 fix).
#   pyarrow  — Parquet serialisation engine used by pandas.to_parquet() /
#              pd.read_parquet(). Preferred over fastparquet for broader type
#              coverage and NumPy 2.x compatibility.
#              Updated to >=22.0.0 — first release with cp314 manylinux wheels;
#              19.0.1 had no Python 3.14 wheel causing CI source-build failures.
#   boto3    — S3-compatible client for the concrete MinIO backend
#              (EphemeralStorageClient's MinioStorageBackend). Unit tests use
#              InMemoryBackend and never instantiate this class.
#   sdv      — Synthetic Data Vault: provides CTGANSynthesizer for per-table
#              CTGAN training (ADR-0017). Verified on PyPI: latest 1.34.3.
#              Version range >=1.17.0,<2.0.0 chosen: 1.17 introduced the
#              stable CTGANSynthesizer API used in T4.2b; <2.0.0 guards against
#              breaking API changes in a future major release.
# Note: pandas is in [tool.poetry.dependencies] (main group); removed from
# synthesizer group to avoid redundancy (T4.1 fix).
# ---------------------------------------------------------------------------
[tool.poetry.group.synthesizer.dependencies]
torch = {version = ">=2.5.0,<3.0.0", python = ">=3.14,<3.15"}
pyarrow = ">=22.0.0,<24.0.0"
boto3 = ">=1.35.0,<2.0.0"
sdv = {version = ">=1.17.0,<2.0.0", python = ">=3.14,<3.15"}
# opacus 1.5.4 — Differential Privacy for PyTorch (DP-SGD via PrivacyEngine).
# Verified compatible: opacus>=1.4.0 requires torch>=2.0; our env has torch 2.10.0.
# No Python version constraint needed — opacus requires python>=3.7.5.
# Added in T4.3b (ADR-0017: CTGAN + Opacus DP path).
opacus = ">=1.4.0,<2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ---------------------------------------------------------------------------
# Ruff — Linting and Formatting
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "S", "B", "A", "C4", "PT", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
# S101: assert — allowed in tests and scripts
# S105: hardcoded-password-string — test-only credentials, not real secrets
# S106: hardcoded-password-in-argument — secret_key/access_key in unit tests are test-only
# S108: insecure /tmp usage — mocked paths in unit tests are not real filesystem calls
# RUF002: ambiguous unicode in docstrings — pre-existing test docstrings use EN DASH notation
"tests/**" = ["S101", "S105", "S106", "S108", "RUF002"]
# S603/S607: subprocess without shell=True / partial path — pre-existing scripts
# UP006/UP035: typing.List is deprecated — scripts pre-date pyproject.toml; modernise in Task 2.x
"scripts/**" = ["S603", "S607", "UP006", "UP035"]
# S311: PRNG intentional — spike code uses random for synthetic data, not cryptography
# S608: SQL injection — spike code uses schema identifiers from sqlite_master, not user input
# RUF100: noqa S311 directives are intentionally co-located with nosec B311 for dual-tool
#         suppression documentation; the file-level S311 ignore makes them technically unused.
# These are exploratory spikes, not production code.
"spikes/**" = ["S311", "S608", "RUF100"]
# B008: FastAPI Depends() in argument defaults is the canonical FastAPI DI pattern.
# The inner `dependency` function is only invoked by the FastAPI framework, never
# called directly as plain Python, so this is intentional and safe.
"src/synth_engine/bootstrapper/dependencies/auth.py" = ["B008"]
# B008: same rationale as auth.py — Depends() calls in route argument defaults are
# intentional FastAPI DI usage, not eager function calls.
"src/synth_engine/bootstrapper/main.py" = ["B008"]
# BLE001: cli.py catches broad Exception intentionally — it is the top-level error
# boundary for the CLI; tracebacks must never reach the operator.
"src/synth_engine/bootstrapper/cli.py" = ["BLE001"]

# ---------------------------------------------------------------------------
# Mypy — Strict Type Checking (src/synth_engine only; scripts/ pre-date this)
# ---------------------------------------------------------------------------
[tool.mypy]
strict = true
python_version = "3.14"
mypy_path = "src"
packages = ["synth_engine"]

# ---------------------------------------------------------------------------
# Bandit — Security Scanner (src/ and scripts/)
# ---------------------------------------------------------------------------
[tool.bandit]
targets = ["src", "scripts", "spikes"]
skips = ["B101"]

# ---------------------------------------------------------------------------
# Pytest — Test Runner and Coverage
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--cov=src/synth_engine",
    "--cov-report=term-missing",
    "--cov-fail-under=90",
    "--tb=short",
    # Disable pytest-postgresql plugin when libpq is not installed (unit-test
    # environments without the integration group). Integration tests that need
    # PostgreSQL must be run explicitly with `pytest -m integration`.
    "-p", "no:pytest_postgresql",
]
markers = [
    "unit: Fast, isolated unit tests with no external dependencies",
    "integration: Tests requiring live databases or external services (Task 2.2)",
]
filterwarnings = [
    # Baseline: all warnings are errors — future regressions fail the build.
    "error",
    # pytest-asyncio 0.26.x uses asyncio.get/set_event_loop_policy internally.
    # These APIs are deprecated in Python 3.14 for removal in 3.16.  The calls
    # live inside the pytest-asyncio plugin; we cannot fix them.
    # Note: Python's warnings._deprecated() uses stacklevel=3, so the warning
    # is attributed to the asyncio stdlib module (not pytest_asyncio.plugin).
    # The filter omits the module scope to match regardless of reported origin.
    "ignore:'asyncio.get_event_loop_policy' is deprecated:DeprecationWarning",
    "ignore:'asyncio.set_event_loop_policy' is deprecated:DeprecationWarning",
    # chromadb 1.5.x uses asyncio.iscoroutinefunction (deprecated in 3.14 for
    # removal in 3.16; the fix is inspect.iscoroutinefunction).  Scoped to the
    # chromadb telemetry sub-package; we cannot change third-party code.
    "ignore:'asyncio.iscoroutinefunction' is deprecated:DeprecationWarning",
    # SDV 1.x and its dependencies (rdt, copulas) emit DeprecationWarnings
    # from third-party code paths that we cannot fix.  Suppressed to keep
    # -W error clean in unit tests.
    "ignore::DeprecationWarning:sdv",
    "ignore::DeprecationWarning:rdt",
    "ignore::DeprecationWarning:copulas",
    "ignore::FutureWarning:sdv",
    "ignore::FutureWarning:rdt",
    "ignore::FutureWarning:copulas",
    # rdt 1.x imports sre_parse (deprecated in Python 3.14 for removal in 3.16;
    # stdlib module deprecated in 3.14 per PEP 594).  The import is inside rdt
    # which we cannot fix.  Attribute the filter to 'sre_parse' so it catches
    # the DeprecationWarning regardless of which frame emits it.
    "ignore:module 'sre_parse' is deprecated:DeprecationWarning",
    "ignore:module 'sre_constants' is deprecated:DeprecationWarning",
    "ignore:module 'sre_compile' is deprecated:DeprecationWarning",
    # SDV 1.x emits UserWarning about saving metadata to JSON for replicability.
    # This is advisory-only; our workflow does not require persisting metadata
    # separately since it is auto-detected per-run from the training DataFrame.
    "ignore:We strongly recommend saving the metadata:UserWarning:sdv",
    # opacus 1.5.x emits a UserWarning about secure RNG being disabled by default.
    # This is expected behavior in non-production/experimentation mode; the warning
    # is advisory-only and we cannot change third-party code. Scoped to opacus.
    "ignore:Secure RNG turned off:UserWarning:opacus",
    # PyTorch 2.10+ emits a UserWarning from full backward hooks registered by
    # Opacus when no input requires gradients. This is an Opacus internal detail
    # that fires through torch.utils.hooks during DP-SGD backward passes.
    "ignore:Full backward hook is firing when gradients are computed:UserWarning:torch",
]

# ---------------------------------------------------------------------------
# Coverage — Source Mapping and Branch Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["synth_engine"]
branch = true

[tool.coverage.paths]
source = ["src/synth_engine", "*/synth_engine"]

# ---------------------------------------------------------------------------
# Import-Linter — Module Boundary Enforcement
# ---------------------------------------------------------------------------
[tool.importlinter]
root_packages = ["synth_engine"]

# ingestion, mapping, masking, profiler, synthesizer, privacy are all mutually
# independent EXCEPT that subsetting may import from mapping (it needs the DAG
# structure).  subsetting is therefore excluded from this independence contract
# and handled by a dedicated allowed-import contract below.
[[tool.importlinter.contracts]]
name = "Module independence: ingestion, mapping, profiler, masking, synthesizer, privacy are independent"
type = "independence"
modules = [
    "synth_engine.modules.ingestion",
    "synth_engine.modules.mapping",
    "synth_engine.modules.profiler",
    "synth_engine.modules.masking",
    "synth_engine.modules.synthesizer",
    "synth_engine.modules.privacy",
]

# subsetting may import from mapping (DagTraversal needs the topology types);
# it must not import from any other module or from bootstrapper.
[[tool.importlinter.contracts]]
name = "subsetting may only import from mapping (not other modules or bootstrapper)"
type = "forbidden"
source_modules = ["synth_engine.modules.subsetting"]
forbidden_modules = [
    "synth_engine.modules.ingestion",
    "synth_engine.modules.masking",
    "synth_engine.modules.profiler",
    "synth_engine.modules.synthesizer",
    "synth_engine.modules.privacy",
    "synth_engine.bootstrapper",
]

[[tool.importlinter.contracts]]
name = "Modules must not import from bootstrapper"
type = "forbidden"
source_modules = [
    "synth_engine.modules.ingestion",
    "synth_engine.modules.mapping",
    "synth_engine.modules.subsetting",
    "synth_engine.modules.profiler",
    "synth_engine.modules.masking",
    "synth_engine.modules.synthesizer",
    "synth_engine.modules.privacy",
    "synth_engine.shared",
]
forbidden_modules = ["synth_engine.bootstrapper"]

[[tool.importlinter.contracts]]
name = "shared must not import from modules or bootstrapper"
type = "forbidden"
source_modules = ["synth_engine.shared"]
forbidden_modules = [
    "synth_engine.modules.ingestion",
    "synth_engine.modules.mapping",
    "synth_engine.modules.subsetting",
    "synth_engine.modules.profiler",
    "synth_engine.modules.synthesizer",
    "synth_engine.modules.masking",
    "synth_engine.modules.privacy",
    "synth_engine.bootstrapper",
]

# ---------------------------------------------------------------------------
# Vulture — Dead Code Detection
# ---------------------------------------------------------------------------
[tool.vulture]
min_confidence = 80
paths = ["src", "vulture_whitelist.py"]
# Abstract method parameters in ABCs are intentionally unused in the stub body.
# These names are suppressed to avoid false positives.
ignore_names = ["older_than", "task_id"]
